Add first module drafts; adjust readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,10 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.7
+install_requires =
+    click
+    flask
+    keras
 
 [options.entry_points]
 console_scripts =
@@ -62,7 +66,7 @@ import_heading_firstparty=First party modules
 import_heading_localfolder=Local modules
 include_trailing_comma=True
 indent='    '
-known_third_party = click,pytest,setuptools
+known_third_party = click,flask,pytest,setuptools
 length_sort=0
 line_length=80
 multi_line_output=3
