--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,7 +11,7 @@ bleach==3.2.1             # via readme-renderer
 certifi==2020.11.8        # via requests
 cffi==1.14.3              # via cryptography
 chardet==3.0.4            # via requests
-click==7.1.2              # via -r requirements.txt, black, pip-tools
+click==7.1.2              # via -r requirements.txt, black, flask, pip-tools
 colorama==0.4.4           # via twine
 coverage==5.3             # via pytest-cov
 cryptography==3.2.1       # via secretstorage
@@ -30,14 +30,21 @@ flake8-pytest-style==1.3.0  # via -r requirements-dev.in
 flake8-raise==0.0.5       # via -r requirements-dev.in
 flake8-string-format==0.3.0  # via -r requirements-dev.in
 flake8==3.8.4             # via -r requirements-dev.in, flake8-assert-msg, flake8-bugbear, flake8-builtins, flake8-comprehensions, flake8-eradicate, flake8-executable, flake8-isort, flake8-raise, flake8-string-format
+flask==1.1.2              # via -r requirements.txt
+h5py==3.1.0               # via -r requirements.txt, keras
 idna==2.10                # via requests
 iniconfig==1.1.1          # via pytest
 isort==5.6.4              # via flake8-isort
+itsdangerous==1.1.0       # via -r requirements.txt, flask
 jeepney==0.5.0            # via keyring, secretstorage
+jinja2==2.11.2            # via -r requirements.txt, flask
+keras==2.4.3              # via -r requirements.txt
 keyring==21.5.0           # via twine
+markupsafe==1.1.1         # via -r requirements.txt, jinja2
 mccabe==0.6.1             # via flake8, pytest-mccabe
 mypy-extensions==0.4.3    # via black, mypy
 mypy==0.790               # via -r requirements-dev.in
+numpy==1.19.4             # via -r requirements.txt, h5py, keras, scipy
 packaging==20.4           # via bleach, pytest
 pathspec==0.8.1           # via black
 pip-tools==5.3.1          # via -r requirements-dev.in
@@ -54,11 +61,13 @@ pytest-cov==2.10.1        # via -r requirements-dev.in
 pytest-mccabe==2.0        # via -r requirements-dev.in
 pytest-timeout==1.4.2     # via -r requirements-dev.in
 pytest==6.1.2             # via -r requirements-dev.in, pytest-cov, pytest-mccabe, pytest-timeout
+pyyaml==5.3.1             # via -r requirements.txt, keras
 readme-renderer==28.0     # via twine
 regex==2020.11.13         # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.25.0          # via requests-toolbelt, twine
 rfc3986==1.4.0            # via twine
+scipy==1.5.4              # via -r requirements.txt, keras
 secretstorage==3.2.0      # via keyring
 six==1.15.0               # via bleach, cryptography, packaging, pip-tools, readme-renderer
 snowballstemmer==2.0.0    # via pydocstyle
@@ -70,6 +79,7 @@ typed-ast==1.4.1          # via black, mypy
 typing-extensions==3.7.4.3  # via black, mypy
 urllib3==1.26.2           # via requests
 webencodings==0.5.1       # via bleach
+werkzeug==1.0.1           # via -r requirements.txt, flask
 wheel==0.35.1             # via -r requirements-dev.in
 
 # The following packages are considered to be unsafe in a requirements file:
