--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,14 @@
 #
 #    pip-compile setup.py
 #
-click==7.1.2              # via minimal_symbol_recognizer (setup.py)
+click==7.1.2              # via flask, minimal_symbol_recognizer (setup.py)
+flask==1.1.2              # via minimal_symbol_recognizer (setup.py)
+h5py==3.1.0               # via keras
+itsdangerous==1.1.0       # via flask
+jinja2==2.11.2            # via flask
+keras==2.4.3              # via minimal_symbol_recognizer (setup.py)
+markupsafe==1.1.1         # via jinja2
+numpy==1.19.4             # via h5py, keras, scipy
+pyyaml==5.3.1             # via keras
+scipy==1.5.4              # via keras
+werkzeug==1.0.1           # via flask
