--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,8 @@ install_requires =
     click
     flask
     keras
+    numpy
+    pillow
 
 [options.entry_points]
 console_scripts =
@@ -66,7 +68,7 @@ import_heading_firstparty=First party modules
 import_heading_localfolder=Local modules
 include_trailing_comma=True
 indent='    '
-known_third_party = click,flask,pytest,setuptools
+known_third_party = PIL,click,flask,numpy,pytest,setuptools
 length_sort=0
 line_length=80
 multi_line_output=3
