--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -47,6 +47,7 @@ mypy==0.790               # via -r requirements-dev.in
 numpy==1.19.4             # via -r requirements.txt, h5py, keras, scipy
 packaging==20.4           # via bleach, pytest
 pathspec==0.8.1           # via black
+pillow==8.0.1             # via -r requirements.txt
 pip-tools==5.3.1          # via -r requirements-dev.in
 pkginfo==1.6.1            # via twine
 pluggy==0.13.1            # via pytest
