Add code for creating a model

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ install_requires =
     keras
     numpy
     pillow
+    tensorflow
 
 [options.entry_points]
 console_scripts =
@@ -68,7 +69,7 @@ import_heading_firstparty=First party modules
 import_heading_localfolder=Local modules
 include_trailing_comma=True
 indent='    '
-known_third_party = PIL,click,flask,numpy,pytest,setuptools
+known_third_party = PIL,click,flask,keras,numpy,pytest,setuptools,tensorflow
 length_sort=0
 line_length=80
 multi_line_output=3
