--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,13 +4,16 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in requirements.txt
 #
+absl-py==0.11.0           # via -r requirements.txt, tensorboard, tensorflow
 appdirs==1.4.4            # via black
+astunparse==1.6.3         # via -r requirements.txt, tensorflow
 attrs==19.3.0             # via flake8-bugbear, flake8-eradicate, flake8-implicit-str-concat, pytest
 black==20.8b1             # via -r requirements-dev.in
 bleach==3.2.1             # via readme-renderer
-certifi==2020.11.8        # via requests
+cachetools==4.1.1         # via -r requirements.txt, google-auth
+certifi==2020.11.8        # via -r requirements.txt, requests
 cffi==1.14.3              # via cryptography
-chardet==3.0.4            # via requests
+chardet==3.0.4            # via -r requirements.txt, requests
 click==7.1.2              # via -r requirements.txt, black, flask, pip-tools
 colorama==0.4.4           # via twine
 coverage==5.3             # via pytest-cov
@@ -31,27 +34,39 @@ flake8-raise==0.0.5       # via -r requirements-dev.in
 flake8-string-format==0.3.0  # via -r requirements-dev.in
 flake8==3.8.4             # via -r requirements-dev.in, flake8-assert-msg, flake8-bugbear, flake8-builtins, flake8-comprehensions, flake8-eradicate, flake8-executable, flake8-isort, flake8-raise, flake8-string-format
 flask==1.1.2              # via -r requirements.txt
-h5py==3.1.0               # via -r requirements.txt, keras
-idna==2.10                # via requests
+gast==0.3.3               # via -r requirements.txt, tensorflow
+google-auth-oauthlib==0.4.2  # via -r requirements.txt, tensorboard
+google-auth==1.23.0       # via -r requirements.txt, google-auth-oauthlib, tensorboard
+google-pasta==0.2.0       # via -r requirements.txt, tensorflow
+grpcio==1.33.2            # via -r requirements.txt, tensorboard, tensorflow
+h5py==2.10.0              # via -r requirements.txt, keras, tensorflow
+idna==2.10                # via -r requirements.txt, requests
 iniconfig==1.1.1          # via pytest
 isort==5.6.4              # via flake8-isort
 itsdangerous==1.1.0       # via -r requirements.txt, flask
 jeepney==0.5.0            # via keyring, secretstorage
 jinja2==2.11.2            # via -r requirements.txt, flask
+keras-preprocessing==1.1.2  # via -r requirements.txt, tensorflow
 keras==2.4.3              # via -r requirements.txt
 keyring==21.5.0           # via twine
+markdown==3.3.3           # via -r requirements.txt, tensorboard
 markupsafe==1.1.1         # via -r requirements.txt, jinja2
 mccabe==0.6.1             # via flake8, pytest-mccabe
 mypy-extensions==0.4.3    # via black, mypy
 mypy==0.790               # via -r requirements-dev.in
-numpy==1.19.4             # via -r requirements.txt, h5py, keras, scipy
+numpy==1.18.5             # via -r requirements.txt, h5py, keras, keras-preprocessing, opt-einsum, scipy, tensorboard, tensorflow
+oauthlib==3.1.0           # via -r requirements.txt, requests-oauthlib
+opt-einsum==3.3.0         # via -r requirements.txt, tensorflow
 packaging==20.4           # via bleach, pytest
 pathspec==0.8.1           # via black
 pillow==8.0.1             # via -r requirements.txt
 pip-tools==5.3.1          # via -r requirements-dev.in
 pkginfo==1.6.1            # via twine
 pluggy==0.13.1            # via pytest
+protobuf==3.14.0          # via -r requirements.txt, tensorboard, tensorflow
 py==1.9.0                 # via pytest
+pyasn1-modules==0.2.8     # via -r requirements.txt, google-auth
+pyasn1==0.4.8             # via -r requirements.txt, pyasn1-modules, rsa
 pycodestyle==2.6.0        # via flake8
 pycparser==2.20           # via cffi
 pydocstyle==5.1.1         # via -r requirements-dev.in
@@ -65,23 +80,31 @@ pytest==6.1.2             # via -r requirements-dev.in, pytest-cov, pytest-mccab
 pyyaml==5.3.1             # via -r requirements.txt, keras
 readme-renderer==28.0     # via twine
 regex==2020.11.13         # via black
+requests-oauthlib==1.3.0  # via -r requirements.txt, google-auth-oauthlib
 requests-toolbelt==0.9.1  # via twine
-requests==2.25.0          # via requests-toolbelt, twine
+requests==2.25.0          # via -r requirements.txt, requests-oauthlib, requests-toolbelt, tensorboard, twine
 rfc3986==1.4.0            # via twine
+rsa==4.6                  # via -r requirements.txt, google-auth
 scipy==1.5.4              # via -r requirements.txt, keras
 secretstorage==3.2.0      # via keyring
-six==1.15.0               # via bleach, cryptography, packaging, pip-tools, readme-renderer
+six==1.15.0               # via -r requirements.txt, absl-py, astunparse, bleach, cryptography, google-auth, google-pasta, grpcio, h5py, keras-preprocessing, packaging, pip-tools, protobuf, readme-renderer, tensorboard, tensorflow
 snowballstemmer==2.0.0    # via pydocstyle
+tensorboard-plugin-wit==1.7.0  # via -r requirements.txt, tensorboard
+tensorboard==2.4.0        # via -r requirements.txt, tensorflow
+tensorflow-estimator==2.3.0  # via -r requirements.txt, tensorflow
+tensorflow==2.3.1         # via -r requirements.txt
+termcolor==1.1.0          # via -r requirements.txt, tensorflow
 testfixtures==6.15.0      # via flake8-isort
 toml==0.10.2              # via black, pytest
 tqdm==4.51.0              # via twine
 twine==3.2.0              # via -r requirements-dev.in
 typed-ast==1.4.1          # via black, mypy
 typing-extensions==3.7.4.3  # via black, mypy
-urllib3==1.26.2           # via requests
+urllib3==1.26.2           # via -r requirements.txt, requests
 webencodings==0.5.1       # via bleach
-werkzeug==1.0.1           # via -r requirements.txt, flask
-wheel==0.35.1             # via -r requirements-dev.in
+werkzeug==1.0.1           # via -r requirements.txt, flask, tensorboard
+wheel==0.35.1             # via -r requirements-dev.in, -r requirements.txt, astunparse, tensorboard, tensorflow
+wrapt==1.12.1             # via -r requirements.txt, tensorflow
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
