--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,48 @@
 #
 #    pip-compile setup.py
 #
+absl-py==0.11.0           # via tensorboard, tensorflow
+astunparse==1.6.3         # via tensorflow
+cachetools==4.1.1         # via google-auth
+certifi==2020.11.8        # via requests
+chardet==3.0.4            # via requests
 click==7.1.2              # via flask, minimal_symbol_recognizer (setup.py)
 flask==1.1.2              # via minimal_symbol_recognizer (setup.py)
-h5py==3.1.0               # via keras
+gast==0.3.3               # via tensorflow
+google-auth-oauthlib==0.4.2  # via tensorboard
+google-auth==1.23.0       # via google-auth-oauthlib, tensorboard
+google-pasta==0.2.0       # via tensorflow
+grpcio==1.33.2            # via tensorboard, tensorflow
+h5py==2.10.0              # via keras, tensorflow
+idna==2.10                # via requests
 itsdangerous==1.1.0       # via flask
 jinja2==2.11.2            # via flask
+keras-preprocessing==1.1.2  # via tensorflow
 keras==2.4.3              # via minimal_symbol_recognizer (setup.py)
+markdown==3.3.3           # via tensorboard
 markupsafe==1.1.1         # via jinja2
-numpy==1.19.4             # via h5py, keras, minimal_symbol_recognizer (setup.py), scipy
+numpy==1.18.5             # via h5py, keras, keras-preprocessing, minimal_symbol_recognizer (setup.py), opt-einsum, scipy, tensorboard, tensorflow
+oauthlib==3.1.0           # via requests-oauthlib
+opt-einsum==3.3.0         # via tensorflow
 pillow==8.0.1             # via minimal_symbol_recognizer (setup.py)
+protobuf==3.14.0          # via tensorboard, tensorflow
+pyasn1-modules==0.2.8     # via google-auth
+pyasn1==0.4.8             # via pyasn1-modules, rsa
 pyyaml==5.3.1             # via keras
+requests-oauthlib==1.3.0  # via google-auth-oauthlib
+requests==2.25.0          # via requests-oauthlib, tensorboard
+rsa==4.6                  # via google-auth
 scipy==1.5.4              # via keras
-werkzeug==1.0.1           # via flask
+six==1.15.0               # via absl-py, astunparse, google-auth, google-pasta, grpcio, h5py, keras-preprocessing, protobuf, tensorboard, tensorflow
+tensorboard-plugin-wit==1.7.0  # via tensorboard
+tensorboard==2.4.0        # via tensorflow
+tensorflow-estimator==2.3.0  # via tensorflow
+tensorflow==2.3.1         # via minimal_symbol_recognizer (setup.py)
+termcolor==1.1.0          # via tensorflow
+urllib3==1.26.2           # via requests
+werkzeug==1.0.1           # via flask, tensorboard
+wheel==0.35.1             # via astunparse, tensorboard, tensorflow
+wrapt==1.12.1             # via tensorflow
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
